@@ -3,6 +3,7 @@
     * agent/gtk-secure-entry.c: Supress warning
     * agent/seahorse-agent.c: 
     * src/main.c: Force exit on all warnings in debug mode    
+    * agent/seahorse-agent-cache.c: Initialize memory properly
     
 2005-07-27  Nate Nielsen  <nielsen@memberwebs.com>
     
